modified file disposition in repo

--- a/main.ipynb
+++ b/main.ipynb
@@ -53,7 +53,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### Vision\n",
     "The vision module handles everything related to the camera. There are four classes : *vision, robot, obstacle* and *target*.\n",
@@ -64,7 +66,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "We will use a picture as an example of what the camera could see."
    ]
@@ -73,6 +77,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
+    "hidden": true,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -115,7 +120,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Each color has to be set individually. To do this, we decided to use the Color Picker from ipywidget. As this is a demo, the colors has already been picked"
    ]
@@ -124,6 +131,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
+    "hidden": true,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -137,7 +145,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "We also have to choose the threshold for each color. The better the uniformity of the color, the lower the thresholds needs to be. As the colors are very uniform, we can use low thresholds."
    ]
@@ -146,6 +156,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
+    "hidden": true,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -159,7 +170,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "#### Robot detection\n",
     "In order to detect the red triangle on top the robot, we first compare the actual frame with the supposed color of the robot"
@@ -169,6 +182,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
+    "hidden": true,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -205,7 +219,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "From this, we get a binary image, using the threshold set before"
    ]
@@ -214,6 +230,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
+    "hidden": true,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -249,7 +266,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Now, we can use cv2.findContours and cv2.approxPolyDP in order to get the triangular shape. We check that the area is big enough and that the shape is actually a triangle."
    ]
@@ -258,6 +277,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
+    "hidden": true,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -299,7 +319,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "From there, we can find the center of the robot, its orientation using the bisector, and the coefficient pixel / cm, knowing the real length of an edge of the triangle."
    ]
@@ -308,6 +330,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
+    "hidden": true,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -370,7 +393,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "#### Obstacles\n",
     "The same can be done to find the contours of the obstacles."
@@ -380,6 +405,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
+    "hidden": true,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -418,6 +444,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
+    "hidden": true,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -455,6 +482,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
+    "hidden": true,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -507,7 +535,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "We need to expand the contours to get the points where the Thymio could fit."
    ]
@@ -516,6 +546,7 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
+    "hidden": true,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -568,7 +599,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Some contours are close enough to prevent the Thymio from going in between. We can merge them together.\n",
     "To do so, we first draw the expanded obstacles then we detect the contour of the generated image"
@@ -578,6 +611,7 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
+    "hidden": true,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -616,7 +650,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Some contours are not convex. We can make them convex using cv2.convexHull()"
    ]
@@ -625,6 +661,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
+    "hidden": true,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -676,7 +713,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "#### Target\n",
     "We only need to find the center of the contour, using the same method as before"
@@ -686,6 +725,7 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
+    "hidden": true,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -725,6 +765,7 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
+    "hidden": true,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -762,6 +803,7 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
+    "hidden": true,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -799,7 +841,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### Global Navigation "
    ]
@@ -808,6 +852,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "hidden": true,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -817,7 +862,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### Filtering\n",
     "The filtering was done using a Kalman Filter. We designed it to use the position and the angle given by the camera as measurement and the speed of the robot, given by the sensors of the wheels, as prediction. For simplicity of use, we decided to create a Kalman_Filter class, so we would have less arguments to give to each functions. However, this class needs to have access to the class Vision and to be given the speed of the robot to work properly.\n"
@@ -825,7 +872,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "#### Equations\n",
     "The Kalman filter merge together a prediction of the future state of the system with a measure of these states to be more precise. The prediction is govern by the system equations. In this section, we are going to describe the equations used in the model and the ones used to implement the merging part of the filter.\n",
@@ -840,6 +889,7 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
+    "hidden": true,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -868,7 +918,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "We can now start the real algorithm of our filter: we start by computing the estimation of our states $\\rho_{est\\text{ }a\\text{ }priori}$ with our model equation. We can then compute the Covariance matrix P: $P_{est \\text{ }a\\text{ }priori} = A \\cdot P_{est} \\cdot A^T + Q$ where Q is the error covariance matrix for the estimation and $Q =\\begin{bmatrix} 1 & 0 & 0\\\\ 0 & 1 & 0 \\\\ 0 & 0 & 0.1\\end{bmatrix}$"
    ]
@@ -877,6 +929,7 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
+    "hidden": true,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -898,14 +951,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "now we need to see if the camera gives us measurement or not. This sadly is only possible with the camera connected so for this demo we are setting a variable acting like the function robot_detected() from our vision module."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "##### Camera not connected\n",
     "If the camera is not connected we set the kalman gain to 0 and therefore we do not compute $S$. For $y$, we simply set it to the last known position."
@@ -913,7 +970,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "##### Camera connected\n",
     "If the camera is detected, we set the measurement as the values retourned by the camera, $pos_x$, $pos_y$ and $\\theta$. This will be our measurement vector $y$. We also compute the covariance matrix for measurement, $S = C \\cdot P_{est \\text{ }a\\text{ }priori} \\cdot C^T + R$, where $C$ is the matrix linking measurements and states and $R$ is the error covariance matrix for the measurement. Finally, we compute the Kalman gain, which is the gain for the measurements $K = P_{est \\text{ }a\\text{ }priori} \\cdot C^T \\cdot S^{-1}$.\n",
@@ -924,6 +983,7 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
+    "hidden": true,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -939,6 +999,7 @@
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {
+    "hidden": true,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -956,7 +1017,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Finally, we compute the innovation (the difference between the measured positions and the estimated positions) $i = y - C \\cdot \\rho_{est\\text{ }a\\text{ }priori}$. We can now compute the new estimation of the position $\\rho_{est} = \\rho_{est\\text{ }a\\text{ }priori} + K \\cdot i$ and the new covariance matrix $P_{est} = (I - K \\cdot C) \\cdot P_{est\\text{ }a\\text{ }priori}$\n"
    ]
@@ -965,6 +1028,7 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {
+    "hidden": true,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -978,7 +1042,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "To see the effect of the filter, we can print the value of $\\rho_{est}$ and the position given by the camera. Of course, with this example being a static one, the position given by the estimate won't be the same as the one seen by the camera, because the camera gives us the last position and the estimate the next position, but it allows us to see the effect of the filter, for example by changing the speed."
    ]
@@ -987,6 +1053,7 @@
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {
+    "hidden": true,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -1008,14 +1075,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### Local Navigation"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "The local avoidance of obstacles is done through the use of an ANN (Artificial Neural Network).<br>\n",
     "In our case we have a single layer neural network composed of two neurons. We feed them the values of the 5 front sensors and they output a speed for each motor in order to avoid the obstacle. We also added a memory which helps the thymio continue moving despite the lack of input from the sensors once the obstacle is partially avoided."
@@ -1023,7 +1094,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "The function is located in 'src/movement' "
    ]
@@ -1032,6 +1105,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "hidden": true,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -1061,21 +1135,27 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "The function takes as input speed_robot, which is the speed calculated thanks to the other modules (vision and kalman filter)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "The weights of the neurons are set in the variable w and were manually tweaked to correctly avoid obstacles. The last two values are used for the memory."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "The if statment is there to distinguish two cases : \n",
     "<ol>\n",
@@ -1085,14 +1165,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "#### runable code (using the thymio) "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "The following code is taken from TP3 and can be used to demonstarte the working principle of the ANN. Note that here the code is transpiled in aseba and loaded on the thymio. In the project the sensors values are passed using ClientAsync more on that in the motion control part of this report."
    ]
@@ -1101,6 +1185,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "hidden": true,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -1114,6 +1199,7 @@
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {
+    "hidden": true,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -1128,6 +1214,7 @@
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {
+    "hidden": true,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -1193,6 +1280,7 @@
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {
+    "hidden": true,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -1204,35 +1292,45 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### Motion Control/movement "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "The different functions disccused further down are located in 'src/movement.py'"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "#### clientAsync"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "We decided to use clientAsync to pass speed values to and from the thymio, because it was a better options in terms of speed and simplicity than having to create custom events and using event based programming directly on the thymio. "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "##### runable code (using the thymio) "
    ]
@@ -1241,6 +1339,7 @@
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {
+    "hidden": true,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -1256,7 +1355,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "start the robot"
    ]
@@ -1265,6 +1366,7 @@
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {
+    "hidden": true,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -1282,7 +1384,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "measure the robot's speed "
    ]
@@ -1291,6 +1395,7 @@
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {
+    "hidden": true,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -1313,7 +1418,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "stop the robot"
    ]
@@ -1322,6 +1429,7 @@
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {
+    "hidden": true,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -1339,21 +1447,27 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "#### compute_speed()"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "The last part of movement we havent discussed is the compute_speed() function. "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "The constants were found through experimentation. The main if statement is here to differentiate two cases : \n",
     "<ol>\n",
@@ -1366,14 +1480,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "##### runable code (no thymio needed)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "In this example,we can see that the speed of each motor is different because the robot needs to slightly adjust its angle in order to aim for the goal."
    ]
@@ -1382,6 +1500,7 @@
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {
+    "hidden": true,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -1425,7 +1544,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "In this second example, the robot is near its actual checkpoint and only needs to turn on itself, therfore the speeds are opposite of each other."
    ]
@@ -1434,6 +1555,7 @@
    "cell_type": "code",
    "execution_count": 35,
    "metadata": {
+    "hidden": true,
     "pycharm": {
      "name": "#%%\n"
     }
