toute petite correction

--- a/Rendu/Group_16_BOMR_project.ipynb
+++ b/Rendu/Group_16_BOMR_project.ipynb
@@ -974,7 +974,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we got a picture from the vision bloc and all is ready to implement our global path planning program, we need to create all the path that are avialable to the robot. To do that, we first convert all the data from the vision to the good format for the  sympy library. This library is use later in the programme to check intersections beteween line and polygon.\n",
+    "Now that we got a picture from the vision bloc and all is ready to implement our global path planning program, we need to create all the path that are available to the robot. To do that, we first convert all the data from the vision to the good format for the  sympy library. This library is use later in the programme to check intersections beteween line and polygon.\n",
     "Then we have to create the polygons, wich correspond to the obstacles, for the sympy library. After that we create the path that are the border of the obstacle"
    ]
   },
