fini pour moi je valide sous cette forme

--- a/Rendu/Group_16_BOMR_project.ipynb
+++ b/Rendu/Group_16_BOMR_project.ipynb
@@ -975,7 +975,7 @@
    "metadata": {},
    "source": [
     "Now that we got a picture from the vision bloc and all is ready to implement our global path planning program, we need to create all the path that are available to the robot. To do that, we first convert all the data from the vision to the good format for the  sympy library. This library is use later in the programme to check intersections beteween line and polygon.\n",
-    "Then we have to create the polygons, wich correspond to the obstacles, for the sympy library. After that we create the path that are the border of the obstacle"
+    "Then we have to create the polygons, wich correspond to the obstacles, for the sympy library. After that we create the path that are the border of the obstacle."
    ]
   },
   {
@@ -1021,7 +1021,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After that we need to create all the path of the visibility graph for the dijkstar algorithm. To do that, we made some loops to go from all the angles from all the obstacles to all the angles from all the other obstacles, then if the link that we just made has only one intersection with an obstacle, we add this link to the array of available path. We need only one intersection because we use the corners of the obstacles to create the line, so we got at leaste one intersection. The other check that we have to do before adding the new path, is that the intersections are between the two corners that create the path.\n",
+    "After that we need to create all the path of the visibility graph for the dijkstar algorithm. To do that, we made some loops to go from all the angles from all the obstacles to all the angles from all the other obstacles, then if the link that we just made has only one intersection with an obstacle, we add this link to the array of available path. We only need one intersection because we use the corners of the obstacles to create the line, so we got at least one intersection. The other check that we have to do before adding the new path, is that the intersections are between the two corners that create the path.\n",
     "By doing this like that, we know that we made some path that will never be use, but since we don't need to optimise the code, we decided to not improve that."
    ]
   },
@@ -1182,8 +1182,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that to run the dijkstar algorithm, we need to have an array with all the nodes of the visibility graph. We had made it in the same time that we add path to the available path array. The way we found to name all the node is a combinaison of the index of the angle and the obstacle in there respective table. We dicided to do this like that to be able to simply found wich node corespond to wich angle.\n",
-    "The last thing to do is to perform the djikstar algoritm. So we use the library dijkstar to do that. To be able to use this library, we notice that we have to precise the direction of the path, so for all path we have two line in mermory, one in a way and an other in the opposit direction."
+    "Note that to run the dijkstar algorithm, we need to have an array with all the nodes of the visibility graph. We made it in the same time that we added path to the available path array. The way we found to name all the node is a combinaison of the index of the angle and the obstacle in their respective table. We decided to do this like that to be able to simply found wich node corespond to wich angle.\n",
+    "The last thing to do is to perform the djikstar algoritm. So we use the library dijkstar to do that. To be able to use this library, we notice that we have to precise the direction of the path, so for all path we have two line in memory, one in a way and an other in the opposit direction."
    ]
   },
   {
@@ -1219,8 +1219,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And when the path is create, the djikstar algorithm return us a list of node name. So we convert this list to a liste of coordonate for the kallman, and mobility blocs.\n",
-    "Finally, we can display the result"
+    "And when the path is created, the djikstar algorithm return us a list of node name. So we convert this list to a list of coordinates for the kalman, and mobility blocks.\n",
+    "Finally, we can display the result:"
    ]
   },
   {
@@ -1335,7 +1335,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "now we need to see if the camera gives us measurement or not. This sadly is only possible with the camera connected so for this demo we are setting a variable acting like the function robot_detected() from our vision module."
+    "now we need to see if the camera gives us measurements or not. This sadly is only possible with the camera connected so for this demo we are setting a variable acting like the function robot_detected() from our vision module."
    ]
   },
   {
@@ -1343,7 +1343,7 @@
    "metadata": {},
    "source": [
     "##### Camera not connected\n",
-    "If the camera is not connected we set the kalman gain to 0 and therefore we do not compute $S$. For $y$, we simply set it to the last known position."
+    "If the camera is not connected we set the kalman gain to 0 and therefore we do not compute $S$. For $y$, we simply set it to the last known position, meaning the last estimated position."
    ]
   },
   {
@@ -1351,7 +1351,7 @@
    "metadata": {},
    "source": [
     "##### Camera connected\n",
-    "If the camera is detected, we set the measurement as the values retourned by the camera, $pos_x$, $pos_y$ and $\\theta$. This will be our measurement vector $y$. We also compute the covariance matrix for measurement, $S = C \\cdot P_{est \\text{ }a\\text{ }priori} \\cdot C^T + R$, where $C$ is the matrix linking measurements and states and $R$ is the error covariance matrix for the measurement. Finally, we compute the Kalman gain, which is the gain for the measurements $K = P_{est \\text{ }a\\text{ }priori} \\cdot C^T \\cdot S^{-1}$.\n",
+    "If the camera is detected, we set the measurements as the values retourned by the camera, $pos_x$, $pos_y$ and $\\theta$. This will be our measurement vector $y$. We also compute the covariance matrix for measurement, $S = C \\cdot P_{est \\text{ }a\\text{ }priori} \\cdot C^T + R$, where $C$ is the matrix linking measurements and states and $R$ is the error covariance matrix for the measurement. Finally, we compute the Kalman gain, which is the gain for the measurements $K = P_{est \\text{ }a\\text{ }priori} \\cdot C^T \\cdot S^{-1}$.\n",
     "We chose to have a small R compared to Q because we want to put much more weight on the camera measurements, the speed sensors being less precise. That way, when our camera is active the kalman filter will output almost the same position as the position given by the camera."
    ]
   },
@@ -1415,7 +1415,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To see the effect of the filter, we can print the value of $\\rho_{est}$ and the position given by the camera. Of course, with this example being a static one, the position given by the estimate won't be the same as the one seen by the camera, because the camera gives us the last position and the estimate the next position, but it allows us to see the effect of the filter, for example by changing the speed."
+    "To see the effect of the filter, we can print the value of $\\rho_{est}$ and the position given by the camera. Of course, with this example being a static one, the position given by the estimate won't be the same as the one seen by the camera, because the camera gives us an arbitrary position and the estimate the next position calculated, but it allows us to see the effect of the filter, for example by changing the speed."
    ]
   },
   {
@@ -1498,7 +1498,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The function takes as input speed_robot, which is the speed calculated thanks to the other modules (vision and kalman filter)"
+    "The function takes as input speed_robot, which is the speed calculated thanks to the other modules (vision and kalman filter)."
    ]
   },
   {
@@ -1529,7 +1529,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following code is taken from TP3 and can be used to demonstarte the working principle of the ANN. Note that here the code is transpiled in aseba and loaded on the thymio. In the project the sensors values are passed using ClientAsync more on that in the motion control part of this report."
+    "The following code is taken from TP3 and can be used to demonstarte the working principle of the ANN. Note that here the code is transpiled in aseba and loaded on the thymio. In the project the sensors values are passed using ClientAsync. More on that in the motion control part of this report."
    ]
   },
   {
@@ -1796,7 +1796,7 @@
     "<li>The robot is not near a checkpoint and acts normally\n",
     "\n",
     "    \n",
-    "> They both have a proportional controller (respectively k_rot and k_forward)"
+    "> They both have a proportional controller (respectively k_rot and k_forward)."
    ]
   },
   {
